# upande_work_management

./: README.md  pyproject.toml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
upande_work_management/: hooks.py  install.py  modules.txt
upande_work_management/api/: actuals.py  assigner.py  config.py  dashboard.py  payment.py  planner.py
upande_work_management/fixtures/: role.json  workflow.json  workflow_action_master.json  workflow_state.json
upande_work_management/public/css/: wm-theme.css
upande_work_management/public/js/: work-actuals.js  work-assigner.js  work-management-dashboard.js  work-payment.js  work-planner.js
upande_work_management/work_management/doctype/wm_farm/: wm_farm.json  wm_farm.py
upande_work_management/work_management/doctype/work_actuals_employee/: work_actuals_employee.json  work_actuals_employee.py
upande_work_management/work_management/doctype/work_assignment_employee/: work_assignment_employee.json  work_assignment_employee.py
upande_work_management/work_management/doctype/work_management_actuals/: work_management_actuals.json  work_management_actuals.py
upande_work_management/work_management/doctype/work_management_assigner/: work_management_assigner.json  work_management_assigner.py
upande_work_management/work_management/doctype/work_management_payment/: work_management_payment.json  work_management_payment.py
upande_work_management/www/: work-actuals.html  work-actuals.py  work-assigner.html  work-assigner.py  work-management.html  work-management.py  work-payment.html  work-payment.py  work-planner.html  work-planner.py
(+10 files in other folders)
